--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <canvas id="board"></canvas>
     
-    <div class="buttons">
+    <div class="buttons responsiveP">
         <div class="side"><span class="button" id="up" onclick="changeDirection(38)"><i class="fa-solid fa-arrow-up"></span></div>
         <div class="side">
             <span class="button" id="left" onclick="changeDirection(39)"><i class="fa-solid fa-arrow-left"></span>
