--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <canvas id="board"></canvas>
     <div class="responsiveP">
     <div class="buttons">
-        <div class="side"><span class="button" id="up" onclick="changeDirection(38)"><i class="fa-solid fa-arrow-up"></span></div>
+        <div class="side"><span class="button" id="up" onclick="changeDirection(38)"><i class="fa-solid fa-arrow-up"></i></span></div>
         <div class="side">
-            <span class="button" id="left" onclick="changeDirection(39)"><i class="fa-solid fa-arrow-left"></span>
-            <span class="button" id="right" onclick="changeDirection(37)"><i class="fa-solid fa-arrow-right"></span>
+            <span class="button" id="left" onclick="changeDirection(39)"><i class="fa-solid fa-arrow-left"></i></span>
+            <span class="button" id="right" onclick="changeDirection(37)"><i class="fa-solid fa-arrow-right"></i></span>
         </div>
-        <div class="side"><span class="button" id="down" onclick="changeDirection(40)"><i class="fa-solid fa-arrow-down"></span></div>
+        <div class="side"><span class="button" id="down" onclick="changeDirection(40)"><i class="fa-solid fa-arrow-down"></i></span></div>
     </div>
-    </div>    
+    </div>
     
     <footer>made by Sachin A</footer>
     <div id="analysis-box">
